[package]
name = "img-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = {version = "0.3", features = ["multipart", "json"]}
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "0.8", features = ["v4"]}
async-trait = "0.1"
multipart = "0.17"
tokio-stream = "0.1"
env_logger = "0"
base64 = "0.13"
chrono = "0.4"

[[bin]]
name = "img-server"
path = "src/main.rs"